[project]
name = "bloggeneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "langgraph-cli[inmem]>=0.4.21",
    "uvicorn>=0.44.0",
    "watchdog>=6.0.0",
]
